<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">fisioExam</string>
    <string name="search">Pesquisar</string>
    <string name="medico">Nome do Médico</string>
    <string name="parentesco">Parentesco</string>
    <string name="responsavel">Responsável</string>
    <string name="atividadeProfissional">Atividade Profissional</string>
    <string name="formacao">Formação</string>
    <string name="grauInstrucao">Grau Instrução</string>
    <string name="estadoCivil">Estado Civil</string>
    <string name="endereco">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="etnia">Etnia</string>
    <string name="genero">Gênero</string>
    <string name="nascimento">Data de Nascimento</string>
    <string name="idade">Idade</string>
    <string name="nome">Nome</string>
    <string name="data">Data</string>
    <string name="tipo_de_exame">Tipo de Exame</string>
    <string name="diagnostico_medico">Diagnostico Medico</string>
    <string name="queixa_principal">Queixa Principal</string>
    <string name="historia_da_doenca_atual">História da Doença Atual</string>
    <string name="salvar">Salvar</string>
    <string name="aparicao_dor">A dor ou incômodo aparece:</string>
    <string name="ao_acordar">Ao acordar</string>
    <string name="decorrer_dia">No decorrer do dia (durante alguma atividade)</string>
    <string name="final_dia">No final do dia</string>
    <string name="constante">É constante</string>
    <string name="descricao_dor">Descrição da dor</string>
    <string name="outra">Outra</string>
    <string name="formigamento">Formigamento</string>
    <string name="sensacao_de_peso">Sensação de peso</string>
    <string name="em_pontada">Em pontada</string>
    <string name="em_queimacao">Em queimação</string>
    <string name="irradiada">Irradiada</string>
    <string name="tipo_de_dor">Tipo de dor</string>
    <string name="ha_quanto_tempo_sente_dor">Há quanto tempo sente dor?</string>
    <string name="sente_dor_ou_incomodo">Sente Dor ou Incômodo?</string>
    <string name="dor_desaparece_com_repouso">A dor/incômodo desaparece com o repouso:</string>
    <string name="next">Próximo</string>
    <string name="ja_fez_tratamento">Já fez tratamento?</string>
    <string name="qual">Qual?</string>
    <string name="ha_quanto_tempo_fez_tratamento">Há quanto tempo fez tratamento?</string>
    <string name="por_quanto_tempo_fez_tratamento">Por quanto tempo fez tratamento?</string>
    <string name="houve_melhora">Houve melhora?</string>
    <string name="algum_problema_o_afastou_da_funcao">Algum problema o afastou da função?</string>
    <string name="tempo_de_afastamento">Tempo de afastamento</string>
    <string name="hipertensao">Hipertensão</string>
    <string name="doencas_associadas">Doenças Associadas</string>
    <string name="historia_pregressa_antecedentes_pessoais">História Pregressa / Antecedentes Pessoais</string>
    <string name="diabete">Diabete</string>
    <string name="doenca_cardiovascular">Doença Cardiovascular</string>
    <string name="doenca_pulmonar">Doença Pulmonar</string>
    <string name="cancer">Câncer</string>
    <string name="medicamentos_em_uso">Medicamentos em Uso</string>
    <string name="dor">Dor</string>
    <string name="tratamento_anterior">Tratamento Anterior</string>
    <string name="afastamento_da_funcao">Afastamento da Função</string>
    <string name="historia_familiar">História Familiar</string>
    <string name="historia_ocupacional">História Ocupacional</string>
    <string name="trabalho_atual">Trabalho Atual</string>
    <string name="local_que_trabalha_atualmente">Local que trabalha atualmente</string>
    <string name="tempo_de_trabalho_atual">Tempo de trabalho (atual)</string>
    <string name="trabalho_anterior">Trabalho Anterior</string>
    <string name="local_que_trabalhou_anteriormente">Local que trabalhou (anteriormente)</string>
    <string name="tempo_de_trabalho_anterior">Tempo de trabalho anterior</string>
    <string name="historia_social_e_habitos_de_vida">História Social e Hábitos de Vida</string>
    <string name="moradia">Moradia</string>
    <string name="casa">Casa</string>
    <string name="apartamento">Apartamento</string>
    <string name="tabagista">Tabagista</string>
    <string name="quantidade_diaria">Quantidade diária</string>
    <string name="etilista">Etilista</string>
    <string name="quantidade_semanal">Quantas vezes por semana?</string>
    <string name="atividade_fisica">Atividade Física</string>
    <string name="lazer">Lazer</string>
    <string name="intensidade_da_dor">Intensidade da Dor:</string>
    <string name="alimentaca_o_restricao">Alimentação - Restrição:</string>
    <string name="sal">Sal</string>
    <string name="acucar">Açúcar</string>
    <string name="frituras">Frituras</string>
    <string name="exames_complementares">Exames Complementares</string>
    <string name="exame_fisico">Exame Físico</string>
    <string name="sinais_vitais">Sinais Vitais</string>
    <string name="pa">PA:</string>
    <string name="fc">FC:</string>
    <string name="fr">FR:</string>
    <string name="temperatura_corporal">Temperatura Corporal</string>
    <string name="inspecao">Inspeção</string>
    <string name="pele">Pele</string>
    <string name="coloracao">Coloração:</string>
    <string name="cianose">Cianose</string>
    <string name="normal">Normal</string>
    <string name="vermelhidao">Vermelhidão</string>
    <string name="hidratacao">Hidratação</string>
    <string name="desidratada">Desidratada</string>
    <string name="hidratada">Hidratada</string>
    <string name="espessura">Espessura</string>
    <string name="fina">Fina</string>
    <string name="espessa">Espessa</string>
    <string name="presenca_de_cicatrizes">Presença de Cicatrizes</string>
    <string name="presenca_de_feridas">Presença de Feridas</string>
    <string name="localizacao">Localização</string>
    <string name="tamanho">Tamanho</string>
    <string name="palpacao">Palpação</string>
    <string name="trofismo_muscular">Trofismo Muscular</string>
    <string name="tecido_osseo">Tecido Ósseo</string>
    <string name="marcha">Marcha</string>
    <string name="edema">Edema</string>
    <string name="proteses">Próteses</string>
    <string name="orteses">Órteses</string>
    <string name="cateteres_e_sondas">Cateteres e Sondas</string>
    <string name="eutrofico">Eutrófico</string>
    <string name="hipotrofico">Hipotrófico</string>
    <string name="hipertrofico">Hipertrófico</string>
    <string name="presenca_de_edema">Presença de Edema</string>
    <string name="presenca_de_proteses">Presença de Próteses</string>
    <string name="presenca_de_orteses">Presença de Órteses</string>
    <string name="presenca_de_cateteres_e_sondas">Presença de Cateteres e Sondas</string>
    <string name="calo_osseo">Calo ósseo</string>
    <string name="desalinhamento_deformidade">Desalinhamento / Deformidade</string>
    <string name="antalgica">Antálgica</string>
    <string name="dor_durante_a_marcha">Dor durante a marcha</string>
    <string name="coloracao_da_pele">Coloração da Pele</string>
    <string name="sem_alteracoes">Sem alterações</string>
    <string name="vermelha">Vermelha</string>
    <string name="equimose_roxa">Equimose (roxa)</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="solteiro">Solteiro</string>
    <string name="casado">Casado</string>
    <string name="divorciado">Divorciado</string>
    <string name="viuvo">Viúvo</string>
    <string name="amasiado">Amasiado</string>
    <string name="analfabeto">Analfabeto</string>
    <string name="ensino_fundamental">Ensino Fundamental</string>
    <string name="ensino_medio">Ensino Médio</string>
    <string name="ensino_superior">Ensino Superior</string>
    <string name="pos_graduacao">Pós-Graduação</string>
    <string name="instrucao_completa">Instrução Completa</string>
    <string name="local_da_dor">Local da Dor</string>
    <string name="feridas">Feridas</string>
    <string name="cicatrizes">Cicatrizes</string>
    <string name="com_aderencias">Com Aderências</string>
    <string name="tensao_muscular">Tensão Muscular</string>
    <string name="temperatura">Temperatura</string>
    <string name="com_cacifo">Com Cacifo</string>
    <string name="aumento">Aumento</string>
    <string name="diminuicao">Diminuição</string>
    <string name="aumentada">Aumentada</string>
    <string name="diminuida">Diminuida</string>
    <string name="grau_de_dor">Grau de Dor</string>
    <string name="dor_a_palpacao">Dor à Palpação</string>
    <string name="icone_preenchido">Icone Preenchido</string>
    <string name="salvar_e_sair">Salvar e Sair</string>
    <string name="nao_ha_pontos_de_tensao">Não há pontos de tensão</string>
    <string name="observacoes">Observações</string>
    <string name="diagnostico_fisioterapeutico">Diagnóstico Fisioterapêutico</string>
    <string name="objetivos_tratamento">Objetivos de Tratamento</string>
    <string name="plano_tratamento">Plano de Tratamento</string>
    <string name="amplitude_movimento">Amplitude de Movimento</string>
    <string name="flexao">Flexão</string>
    <string name="extensao">Extensão</string>
    <string name="abducao">Abdução</string>
    <string name="aducao_horizontal">Adução Horizontal</string>
    <string name="rotacao_medial">Rotação Medial</string>
    <string name="rotacao_lateral">Rotação Lateral</string>
    <string name="ativo">Ativo</string>
    <string name="passivo">Passivo</string>
    <string name="texto_ritmo_escapulo_umeral">realizar o movimento de abdução completa combinada com 30° de flexão do ombro</string>
    <string name="titulo_ritmo_escapulo_umeral">Ritmo escápulo-umeral (Discinesia escapular):</string>
    <string name="alteracao">Alteração</string>
    <string name="graus">Graus</string>
    <string name="grau_i_amp_mov_ombro">I (ângulo inferior da escápula proeminente)</string>
    <string name="grau_ii_amp_mov_ombro">II (ângulo inferior e metade do bordo medial da escápula proeminentes)</string>
    <string name="grau_iii_amp_mov_ombro">III (ângulo inferior e do bordo medial da escápula proeminentes)</string>
    <string name="esquerdo">Esquerdo</string>
    <string name="direito">Direito</string>
    <string name="perimetria">Perimetria</string>
    <string name="perimetria_ombro">Interlinha a partir da Fossa Antecubial</string>
    <string name="superior">Superior</string>
    <string name="cincocm">5cm</string>
    <string name="dezcm">10cm</string>
    <string name="quinzecm">15cm</string>
    <string name="inferior">Inferior</string>
    <string name="forca_muscular">Força Muscular</string>
    <string name="trapezio_superior_ombro">Trapézio Superior e Levantador da Escápula (Elevação da Escápula)</string>
    <string name="trapezio_medio_ombro">Trapézio médio (adução da escápula)</string>
    <string name="trapezio_inferior_ombro">Trapézio Inferior (adução e depressão da escápula)</string>
    <string name="romboides_ombro">Romboides Maior e Menor (adução escapular e rotação inferior)</string>
    <string name="serratil_ombro">Serrátil Anterior (adução e rotação superior da escápula)</string>
    <string name="deltoide_anterior_ombro">Deltoide Anterior (flexão de ombro até 180° e adução de ombro)</string>
    <string name="sair">Sair</string>
    <string name="email_dev">stefanschneiderdev@gmail.com</string>
    <string name="devGit">github.com/SGSchneider</string>
    <string name="VersionNumber">a1.0.2.40</string>
    <string name="versao">Versão</string>
    <string name="DevName">Desenvolvido por: Stefan G. Schneider</string>
    <string name="email_dra">eloayamada@gmail.com</string>
    <string name="Idealizacao">Idealizado por: Dra. Eloá Ferreira Yamada</string>
    <string name="Orientacao">Orientado por: Dr. Daniel Welfer</string>
    <string name="email_orient">welfer@gmail.com</string>
</resources>